--- a/ScalePickerCarousel/Base.lproj/Main.storyboard
+++ b/ScalePickerCarousel/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="ScalePickerCarousel" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,8 +16,59 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZ0-2H-hFp" customClass="iCarousel">
+                                <rect key="frame" x="0.0" y="250" width="600" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="iFJ-QS-ptD"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYF-ZM-DJF">
+                                <rect key="frame" x="285" y="350" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="HD0-Fa-wum"/>
+                                    <constraint firstAttribute="width" constant="30" id="y23-2c-nVc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEH-f3-QgU">
+                                <rect key="frame" x="240" y="380" width="120" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="8ph-Eb-WSb"/>
+                                    <constraint firstAttribute="width" constant="120" id="BST-qm-SrH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="XZ0-2H-hFp" secondAttribute="trailing" constant="-16" id="0Pr-Zh-DIu"/>
+                            <constraint firstAttribute="centerX" secondItem="KYF-ZM-DJF" secondAttribute="centerX" id="Fbs-Sm-1ot"/>
+                            <constraint firstAttribute="centerY" secondItem="XZ0-2H-hFp" secondAttribute="centerY" id="JcH-cF-w4p"/>
+                            <constraint firstItem="XZ0-2H-hFp" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="6" id="KIB-Bm-cvh"/>
+                            <constraint firstAttribute="centerX" secondItem="XEH-f3-QgU" secondAttribute="centerX" id="S1U-Bi-R6d"/>
+                            <constraint firstItem="KYF-ZM-DJF" firstAttribute="top" secondItem="XZ0-2H-hFp" secondAttribute="bottom" id="SiL-HB-TNw"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="XZ0-2H-hFp" secondAttribute="bottom" constant="-6" id="WKm-m4-pXD"/>
+                            <constraint firstItem="XEH-f3-QgU" firstAttribute="top" secondItem="KYF-ZM-DJF" secondAttribute="bottom" id="ZRI-Gb-tdl"/>
+                            <constraint firstItem="XZ0-2H-hFp" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="hQD-wK-i2h"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="KIB-Bm-cvh"/>
+                                <exclude reference="WKm-m4-pXD"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="carousel" destination="XZ0-2H-hFp" id="cgm-rO-pFQ"/>
+                        <outlet property="label" destination="XEH-f3-QgU" id="HCu-Kx-BgT"/>
+                        <outlet property="traingleLabel" destination="KYF-ZM-DJF" id="QO0-0P-W29"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
