--- a/ScalePickerCarousel/Base.lproj/Main.storyboard
+++ b/ScalePickerCarousel/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYF-ZM-DJF">
-                                <rect key="frame" x="285" y="350" width="30" height="30"/>
+                                <rect key="frame" x="285" y="357" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="HD0-Fa-wum"/>
                                     <constraint firstAttribute="width" constant="30" id="y23-2c-nVc"/>
@@ -35,7 +35,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEH-f3-QgU">
-                                <rect key="frame" x="240" y="380" width="120" height="30"/>
+                                <rect key="frame" x="240" y="387" width="120" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="8ph-Eb-WSb"/>
                                     <constraint firstAttribute="width" constant="120" id="BST-qm-SrH"/>
@@ -44,23 +44,35 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R5I-6C-Ecg">
+                                <rect key="frame" x="41" y="350" width="518" height="7"/>
+                                <color key="backgroundColor" red="0.34509803921568627" green="0.76078431372549016" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="7" id="oaX-XO-4uT"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="XZ0-2H-hFp" secondAttribute="trailing" constant="-16" id="0Pr-Zh-DIu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="R5I-6C-Ecg" secondAttribute="trailing" constant="25" id="ERk-9l-JnM"/>
                             <constraint firstAttribute="centerX" secondItem="KYF-ZM-DJF" secondAttribute="centerX" id="Fbs-Sm-1ot"/>
                             <constraint firstAttribute="centerY" secondItem="XZ0-2H-hFp" secondAttribute="centerY" id="JcH-cF-w4p"/>
                             <constraint firstItem="XZ0-2H-hFp" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="6" id="KIB-Bm-cvh"/>
+                            <constraint firstItem="R5I-6C-Ecg" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="25" id="O7p-jw-TlQ"/>
                             <constraint firstAttribute="centerX" secondItem="XEH-f3-QgU" secondAttribute="centerX" id="S1U-Bi-R6d"/>
                             <constraint firstItem="KYF-ZM-DJF" firstAttribute="top" secondItem="XZ0-2H-hFp" secondAttribute="bottom" id="SiL-HB-TNw"/>
                             <constraint firstAttribute="bottomMargin" secondItem="XZ0-2H-hFp" secondAttribute="bottom" constant="-6" id="WKm-m4-pXD"/>
                             <constraint firstItem="XEH-f3-QgU" firstAttribute="top" secondItem="KYF-ZM-DJF" secondAttribute="bottom" id="ZRI-Gb-tdl"/>
                             <constraint firstItem="XZ0-2H-hFp" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="hQD-wK-i2h"/>
+                            <constraint firstItem="R5I-6C-Ecg" firstAttribute="top" secondItem="XZ0-2H-hFp" secondAttribute="bottom" id="js1-er-XwF"/>
+                            <constraint firstItem="KYF-ZM-DJF" firstAttribute="top" secondItem="R5I-6C-Ecg" secondAttribute="bottom" id="qDe-eg-LyF"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="KIB-Bm-cvh"/>
                                 <exclude reference="WKm-m4-pXD"/>
+                                <exclude reference="SiL-HB-TNw"/>
                             </mask>
                         </variation>
                     </view>
